DOCS: inclusão da documentação do login de usuários
